Fixed navbar collapse, pdf viewer, and mobile button display problems

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ a {
 
 
 a.button {
-  -webkit-appearance: button;
+  -webkit-appearance: none;
   -moz-appearance: button;
   appearance: button;
 
